Fix word wrap for terminal pre element

--- a/app/assets/stylesheets/player.css.scss
+++ b/app/assets/stylesheets/player.css.scss
@@ -60,6 +60,7 @@ $color5: #EDC951;
     background-color: black;
     color: #ccc;
     border: 0;
+    word-wrap: normal;
 
     .line {
       /* background-color: black;*/
